# parallel-matplotlib-animation

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/animator/: index.html
assets/: scaling_graph.html
benchmark/: index.html
dev/: mp4_to_gif.sh
developer/: index.html
docs/: benchmark.md  developer.md  embed_example_videos.py  examples.md  gen_benchmark.py  index.md  installation.md  usage.md
docs/api/: animator.md
examples/: index.html  multi_panel_animation.py  nondeterministic_video_loader.py  run_all_except_benchmarks.sh  scaling_test.py  simple_wave_animation.py  very_complex_animation.py
examples/output/scaling_test/: scaling_graph.html
installation/: index.html
search/: search_index.json
src/parallel_animate/: __init__.py  animator.py  util.py
src/parallel_animate/examples/: nondeterministic_video_loader.py
tests/: test_animator.py  test_examples.py  test_pvio_options.py  test_util.py
usage/: index.html
