[project]
name = "parallel-matplotlib-animation"
version = "0.1.2"
description = "Animate matplotlib figures into videos, in parallel but with efficient caching"
authors = [
    { name = "Sibo Wang-Chen", email = "sibo.wang@epfl.ch" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2,<3",
    "tqdm>=4.67",
    "av>=14.0",
    "Pillow>=11.0",
]

[project.urls]
Repository = "https://github.com/sibocw/parallel-matplotlib-animation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_animate"]
