[project]
name = "parallel-matplotlib-animation"
version = "0.1.3"
description = "Animate matplotlib figures into videos, in parallel but with efficient caching"
authors = [
    { name = "Sibo Wang-Chen", email = "sibo.wang@epfl.ch" }
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2,<3",
    "tqdm>=4.67",
    "parallel-video-io==0.1.8",
]

[project.optional-dependencies]
dev = [
    # Unit testing
    "pytest>=9.0,<10.0",
    # Formatting & linting
    "ruff>=0.15",
    # Documentation
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.29",
]
benchmark = [
    # Reporting and plotting for the strong-scaling benchmark
    # (examples/scaling_test.py). matplotlib is already a core dependency and
    # renders the animation frames; these add an interactive Plotly figure and a
    # pandas results table. The benchmark also exercises parallel-video-io's GPU
    # (NVENC) encoder when a CUDA device is available; no extra dependency is
    # needed for it, as parallel-video-io is already a core dependency.
    "plotly>=6.8,<7.0",
    "pandas>=2.0,<3.0",
]

[project.urls]
Repository = "https://github.com/sibocw/parallel-matplotlib-animation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_animate"]

[tool.pytest.ini_options]
# The package lives under src/ and is not installed into the env, so put it on
# the import path for test collection.
pythonpath = ["src"]
testpaths = ["tests"]
